[package]
name = "ezfdbootloader-device"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["stm32h533re", "memory-x", "time-driver-any", "exti", "unstable-pac", "low-power-disable-pender", "cyw43"] }
embassy-sync = { version = "0.7.2" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
embassy-net = { version = "0.8.0", features = ["tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
embassy-usb = { version = "0.5.1" }
embassy-futures = { version = "0.1.2" }
cyw43 = { version = "0.6.0"}

rtt-target = "0.6"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.7.0" }
embedded-nal-async = "0.9.0"
panic-halt = "0.2"
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.4.0"
embedded-storage = "0.3.1"
static_cell = "2"
embedded-can = "0.4.1"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/stm32h5" }
]
