[package]
name = "ezfdbootloader-device"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["stm32h533re", "memory-x", "unstable-pac", "time-driver-any"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4"

rtt-target = "0.6"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2"
embedded-can = "0.4.1"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "2b7a98b9981168264cd474596ac687f458e2e412" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true
# incremental = false
# opt-level = 3
# overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
strip = "symbols"

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
strip = "symbols"

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/stm32h5" }
]
